--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,16 @@ dependencies:
     sdk: flutter
   sqflite: ^2.2.0
   path: ^1.8.3
-  
+  cloud_firestore: ^4.14.0
+  firebase_core: ^2.24.2
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_database: ^10.4.0
 
 dev_dependencies:
   flutter_test:
