--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   path: ^1.8.3
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
-
-
+  url_launcher: ^6.1.10
+  share: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
