--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,9 +22,9 @@ jobs:
 
       # Set up Flutter
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 'stable'
+        run: |
+          git clone https://github.com/flutter/flutter.git -b stable
+          echo "$HOME/flutter/bin" >> $GITHUB_PATH
 
       # Check Flutter installation
       - name: Verify Flutter installation
