--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -20,13 +20,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Flutter
-      - name: Set up Flutter
+      # Install Flutter explicitly
+      - name: Install Flutter
         run: |
           git clone https://github.com/flutter/flutter.git -b stable
           echo "$HOME/flutter/bin" >> $GITHUB_PATH
+          flutter doctor
 
-      # Check Flutter installation
+      # Verify Flutter installation
       - name: Verify Flutter installation
         run: flutter --version
 
