--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -23,13 +23,10 @@ jobs:
       # Install Flutter explicitly
       - name: Install Flutter
         run: |
-          git clone https://github.com/flutter/flutter.git -b stable
+          git clone https://github.com/flutter/flutter.git -b stable $HOME/flutter
           echo "$HOME/flutter/bin" >> $GITHUB_PATH
           flutter doctor
-
-      # Verify Flutter installation
-      - name: Verify Flutter installation
-        run: flutter --version
+          flutter --version
 
       # Install dependencies
       - name: Install dependencies
