--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,16 +10,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install the latest stable Flutter SDK (make sure it's a version >= 3.1.4 Dart SDK)
+      # Install latest stable Flutter (which includes Dart >= 3.1.4)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.0'  # This Flutter version includes Dart SDK >= 3.1.4
+          flutter-version: '3.13.0'  # Ensure Dart 3.1.4+ is included
+          channel: 'stable'
 
-      # Check Flutter and Dart versions
+      # Verify the installed Flutter and Dart versions
       - run: flutter --version
 
-      # Install dependencies for the project
+      # Enable web support if necessary
+      - run: flutter config --enable-web
+
+      # Clean old builds (optional, helps with dependency issues)
+      - run: flutter clean
+
+      # Install dependencies
       - run: flutter pub get
 
       # Build the web app
